quickerSDLPoPSubproject = subproject('quickerSDLPoP')

# Getting QuickerSDLPoP dependency
quickerSDLPoPDependency = quickerSDLPoPSubproject.get_variable('quickerSDLPoPDependency')
emulatorDependencies += quickerSDLPoPDependency

SDLPoPDependency = quickerSDLPoPSubproject.get_variable('SDLPoPDependency')
emulatorDependencies += SDLPoPDependency