quickerNESSubproject = subproject('quickerNES')

# Getting QuickerNES dependency
quickerNESDependency = quickerNESSubproject.get_variable('quickerNESDependency')
toolDependency = quickerNESSubproject.get_variable('toolDependency')
jaffarDependencies += quickerNESDependency
jaffarDependencies += toolDependency